--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ body{
         <h1 class="text-primary">Login</h1>  
         <form name="f1" action = "authentication.php" onsubmit = "return validation()" method = "POST">  
             <p>  
-                <label class="text-white"> UserName: </label><br>  
+                <label class="text-white"> Username: </label><br>  
                 <input type = "text" id ="user" name  = "user" class="p-1 mt-2"/>  
             </p>  
             <p>  
